My second commit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<ul class="nav navbar-nav menu_nav ml-auto">
 								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> 
 								<li class="nav-item"><a class="nav-link" href="about-us.html">About</a></li> 
-								<li class="nav-item"><a class="nav-link" href="services.html">Services</a>
+								<!-- <li class="nav-item"><a class="nav-link" href="services.html">Services</a> -->
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
 									<ul class="dropdown-menu">
@@ -76,9 +76,9 @@
 						<div class="col-lg-6">
 							<div class="banner_content">
 								<h5>This is me</h5>
-								<h2>Travor James</h2>
+								<h2>Pranav Nahe</h2>
 								<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
-								<a class="banner_btn" href="#">Discover Now</a>
+								<!-- <a class="banner_btn" href="#">Discover Now</a> -->
 							</div>
 						</div>
 					</div>
